# EpubTranslate

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  prompts_config.json  pyproject.toml  requirements.txt  translator_config.json.example
src/translator/: __init__.py  providers.py
src/translator/api/: __init__.py  model_fetcher.py  openrouter_fetcher.py
src/translator/config/: __init__.py  config_manager.py
src/translator/core/: __init__.py  chapter_status.py  context_filter.py  context_manager.py  epub_rebuilder.py  prompts.py  toc_translation_worker.py  translation_worker.py
src/translator/ui/: __init__.py  chapter_overview_widget.py  main_window.py
src/translator/utils/: __init__.py  logging_config.py  token_counter.py
