[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epub-translate"
version = "1.0.0"
description = "AI-powered EPUB ebook translation with advanced context management"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "EpubTranslate Contributors"}
]
keywords = [
    "epub",
    "translation",
    "ebook",
    "ai",
    "llm",
    "openrouter",
    "natural-language-processing",
    "book-translation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: X11 Applications :: Qt",
]
dependencies = [
    "PySide6>=6.8.0",
    "ebooklib>=0.18",
    "pypandoc>=1.14",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "openai>=1.58.1",
    "tiktoken>=0.8.0",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/BeetleBonsai798/EpubTranslate"
Repository = "https://github.com/BeetleBonsai798/EpubTranslate"
Issues = "https://github.com/BeetleBonsai798/EpubTranslate/issues"

[project.scripts]
epub-translate = "main:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json"]
